gateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
  namespace: istio-study
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-info
  namespace: istio-study
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            exact: /static/favicon.ico
        - uri:
            prefix: /
#        - uri:
#            exact: /get
#        - uri:
#            prefix: /delete
#        - uri:
#            exact: /post
#        - uri:
#            exact: /put
#        - uri:
#            prefix: /status
      route:
        - destination:
            host: local-docker-httpbin
            port:
              number: 8001
