gateway/httpbin-service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: local-docker-httpbin-entry
  namespace: istio-study
  labels:
    app: filter-app
    filter-mark: filter-app

spec:
  hosts:
    - "local-docker-httpbin.istio-study.svc.cluster.local"
  location: MESH_INTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  endpoints:
  - address: local-docker-httpbin.istio-study.svc.cluster.local
    ports:
      http: 8001

---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-httpbin-entry
  namespace: istio-study
  labels:
    app: filter-app2
    filter-mark: filter-app
spec:
  hosts:
  - "external-httpbin-entry.com"
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: "198.19.249.3"
  ports:
  - number: 8001
    name: http
    protocol: HTTP
