gateway/httpbin-service.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: local-docker-httpbin
  namespace: istio-study
subsets:
  - addresses:
      - ip: 198.19.249.3
    ports:
      - port: 8001

---
apiVersion: v1
kind: Service
metadata:
  name: local-docker-httpbin
  namespace: istio-study
spec:
  type: NodePort
  ports:
    - port: 8001
#      nodePort: 30001
      targetPort: 8001

---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: local-docker-httpbin
  namespace: istio-study
  labels:
    app: filter-app
    filter-mark: filter-app

spec:
  hosts:
    - "local-docker-httpbin.istio-study.svc.cluster.local"
  location: MESH_INTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
